# newspeak

./: CMakeLists.txt  README.md
collections/: CMakeLists.txt
collections/include/: list.h
collections/src/: list.c
lib/: CMakeLists.txt
lib/grammar/: newspeak.y
lib/include/: ast-print.h  ast.h  interpreter.h  parser.h  speakvm.h
lib/src/: ast-print.c  ast.c  interpreter.c  speakvm.c
main/: CMakeLists.txt
main/grammar/: newspeak.l  newspeak.y
main/include/: ast-print.h  ast.h
main/src/: ast-print.c  ast.c  main.c
parser/: CMakeLists.txt
parser/include/: parser.h
parser/src/: ast-print.c
tests/: CMakeLists.txt
tests/src/: speakvm-test.c
